# rust-sec-examples

combinations/: Cargo.toml
combinations/src/: lib.rs
ethiopian-multiplication/: Cargo.toml
ethiopian-multiplication/src/: lib.rs
isin/: Cargo.toml
isin/src/: main.rs
keylogger/: Cargo.toml
keylogger/src/: lib.rs  main.rs
luhn_cc/: Cargo.toml
luhn_cc/src/: lib.rs
ssh_client/: Cargo.toml  README.md
ssh_client/src/: main.rs
ssh_payload/: Cargo.toml  README.md
ssh_payload/src/: main.rs
syn_flooding/: Cargo.toml
syn_flooding/src/: main.rs
unix-ls/: Cargo.toml
unix-ls/src/: main.rs
unix-shadow-dictionary/: Cargo.toml
unix-shadow-dictionary/src/: main.rs
