[package]
name = "ssh_server"
version = "0.1.0"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = { path = "/home/polochon/Documents/Programming/Rust/thrussh-0.28.0" }
thrussh-keys = "*"
futures = "*"
tokio = "*"
anyhow = "*"
env_logger = "*"
log = "*"
openssl = { version = "0.10.30", features = ["vendored"] }

[features]    
default = ["net-tokio"]
net-tokio = ["tokio/net"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincrypt"] }
